--- a/SourceCode/2024/March2024/Abishek/Task26_Statemachine/Task26_StaeMachine.xaml
+++ b/SourceCode/2024/March2024/Abishek/Task26_Statemachine/Task26_StaeMachine.xaml
@@ -79,7 +79,7 @@
       <AssemblyReference>System.Runtime.Numerics</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <StateMachine InitialState="{x:Reference __ReferenceID2}" DisplayName="Task26_StaeMachine" sap:VirtualizedContainerService.HintSize="634,637.3333333333334" sap2010:WorkflowViewState.IdRef="StateMachine_1">
+  <StateMachine InitialState="{x:Reference __ReferenceID2}" sap2010:Annotation.AnnotationText="Guess the Random Number (State Machine)&#xD;&#xA;The Three logics will be applied to three possible States&#xD;&#xA;Guess Number &gt; Random Number - It should retry if the number is not same&#xD;&#xA;Guess Number&lt;Random Number- it should retry is number is not same&#xD;&#xA;Guess Number = Random - This will be final state" DisplayName="Task26_StaeMachine" sap:VirtualizedContainerService.HintSize="634,729.3333333333333" sap2010:WorkflowViewState.IdRef="StateMachine_1">
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -87,6 +87,7 @@
         <x:Double x:Key="StateContainerWidth">600</x:Double>
         <x:Double x:Key="StateContainerHeight">600</x:Double>
         <av:PointCollection x:Key="ConnectorLocation">294,77.16666666666667 294,107.16666666666667 290,107.16666666666667 290,148.66666666666666</av:PointCollection>
+        <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
     <State x:Name="__ReferenceID2" DisplayName="Generate Random Number" sap:VirtualizedContainerService.HintSize="134,62.666666666666664" sap2010:WorkflowViewState.IdRef="State_1">
