--- a/SourceCode/2024/march2024/bhavani/Task28/Main.xaml
+++ b/SourceCode/2024/march2024/bhavani/Task28/Main.xaml
@@ -115,7 +115,7 @@
         <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <Sequence sap2010:Annotation.AnnotationText="Complete all the PDF activities task in one or two Sequence" sap:VirtualizedContainerService.HintSize="450,974" sap2010:WorkflowViewState.IdRef="Sequence_4">
+    <Sequence sap2010:Annotation.AnnotationText="combining all the PDF activities here&#xD;&#xA;step1:Read pdf text&#xD;&#xA;step2:read pdf with ocr&#xD;&#xA;step3:export pdf page as image&#xD;&#xA;step4:extract image as pdf&#xD;&#xA;step5:extract pdf page range&#xD;&#xA;step6:get pdf page count&#xD;&#xA;step7:join pdf files&#xD;&#xA;step8:manage pdf passwords" sap:VirtualizedContainerService.HintSize="450,974" sap2010:WorkflowViewState.IdRef="Sequence_4">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
